--- a/recipe.html
+++ b/recipe.html
@@ -49,9 +49,9 @@
 		<h1> Fresh onion burger</h1>
 		
 		<ul> 
-			<li><a href="1.html" class="first" style="margin-right: 250px"> order now </a> </li>
+			<li><a href="index.html" class="first" style="margin-right: 250px"> order now </a> </li>
 			
-			<li><a href="home.html"> Home</a></li> 
+			<li><a href="index.html"> Home</a></li> 
 			<li><a href="services.html"> Services </a></li> 
 			<li><a href="about.html"> About us </a></li> 
 			<li><a href="contact.html"> Contact us </a></li> 
