--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@ a{
  	<nav class="navbar"> 
 		<div class="title"> FoodYa </div>
 		<ul>
-			<li><a href="home.html"> Home</a></li> 
+			<li><a href="index.html"> Home</a></li> 
 			<li><a href="services.html"> Services </a></li> 
 			<li><a href="" class="first"> About us </a></li> 
 			<li><a href="contact.html"> Contact us </a></li> 
