--- a/services.html
+++ b/services.html
@@ -51,7 +51,7 @@ a{
  	<nav class="navbar"> 
 		<div class="title"> FoodYa </div>
 		<ul>  
-			<li><a href="home.html"> Home</a></li> 
+			<li><a href="index.html"> Home</a></li> 
 			<li><a href="#" class="first"> Services </a></li> 
 			<li><a href="about.html"> About us </a></li> 
 			<li><a href="contact.html"> Contact us </a></li> 
